src/objects/TR1__Jobs_Feeds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TR1__Element_Name__c</fullName>
        <label>Element Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Field_Default_Value__c</fullName>
        <label>Field Default Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Jobs Feeds</label>
</CustomObject>